fix: images grid sizing and scroll overflow

--- a/src/components/ContentEditor/ContentEditor.module.scss
+++ b/src/components/ContentEditor/ContentEditor.module.scss
@@ -36,6 +36,8 @@
 }
 
 .mainComposerInputMedia {
+  width: 100%;
+
   display: flex;
   gap: 3.2rem;
 
